--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,7 +8,7 @@
     left: 0;
     right: 0;
     z-index: 99999;
-    background: $color-white;
+    background: rgba(255, 255, 255, 0.837);
 
     .navbar {
         padding: 0;
