--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,14 +1,34 @@
 @import '../../sass/colors.scss';
 
+.login {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+    flex-direction: row;
+    justify-content: center;
+    background-image: url("~/images/admin-log-in.png");
+    line-height: normal;
+    letter-spacing: normal;
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+}
 .login-container {
-    width: 400px;
     margin: 0 auto;
-    margin-top: 100px; /* Adjust this value to control vertical positioning */
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    margin-top: 50px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
+    width: 561px;
+    border-radius: 37px;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 163px;
+    background-image: url("~/images/admin-login-contents.png");
+    max-width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .login-container h2 {
