--- a/src/pages/AdminPages/AdminBlogs.scss
+++ b/src/pages/AdminPages/AdminBlogs.scss
@@ -1,4 +1,3 @@
-// AdminBlogs.scss
 @import './../../sass/colors.scss';
 
 .admin-blogs {
@@ -49,7 +48,7 @@
             padding: 15px;
             background-color: #fff;
             border-radius: 5px;
-            flex-grow: 1; /* Allow the text to expand to fill remaining space */
+            flex-grow: 1;
             display: flex;
             flex-direction: column;
         }
@@ -68,14 +67,14 @@
 
         p {
             font-size: 15px;
-            flex-grow: 1; /* Allow the description to expand to fill remaining space */
+            flex-grow: 1; 
         }
 
         .button-container {
             display: flex;
             justify-content: space-between;
             padding: 5px;
-            margin-top: auto; /* Push the button container to the bottom */
+            margin-top: auto; 
         }
 
         .edit-button, .delete-button {
