--- a/src/pages/AdminPages/AdminTestimonials.scss
+++ b/src/pages/AdminPages/AdminTestimonials.scss
@@ -1,94 +1,56 @@
-@import './../../sass/colors.scss';
-
-.admin {
+.admin-testimonials {
     padding: 20vh;
 
-    .admin-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 20px;
-    }
+    .testimonials-table {
+        margin-bottom: 40px;
 
-    .upload-container {
-        display: flex;
-    }
-
-    .upload-button {
-        padding: 10px 20px;
-        background-color: $color-blue;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
-
-    .upload-button:hover {
-        background-color: #0056b3;
-    }
-
-    #file-upload {
-        display: none;
-    }
-
-    .gallery-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-        gap: 20px;
-    }
-
-    .gallery-item {
-        position: relative;
-        overflow: hidden;
-
-        img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-
-        .button-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 5px;
-        }
-
-        .replace-button, button {
-            width: 100%;
-            padding: 5px 10px;
-            background-color: #cc4545;
+        h2 {
             text-align: center;
-            color: #fff;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-            margin-bottom: 5px;
+            margin-bottom: 20px;
         }
 
-        .replace-button {
-            background-color: $color-blue;
-        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            text-align: center;
 
-        input[type="file"] {
-            display: none;
-        }
-    }
+            th, td {
+                padding: 10px;
+                border: 1px solid #ddd;
+            }
 
-    .placeholder {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 2px dashed #ccc;
-        border-radius: 5px;
-        background-color: #f9f9f9;
-        color: #666;
-        font-size: 18px;
-        cursor: pointer;
+            tr:hover {
+                background-color: #ddd;
+            }
 
-        input[type="file"] {
-            display: none;
+            button {
+                padding: 5px 10px;
+                color: #fff;
+                border: none;
+                border-radius: 3px;
+                cursor: pointer;
+                transition: background-color 0.3s;
+                margin-right: 5px;
+                font-size: 10px;
+                width: 100%;
+            }
+
+            .approve-button {
+                background-color: #28a745;
+
+                &:hover {
+                    background-color: #218838;
+                }
+            }
+
+            .remove-button {
+                background-color: #dc3545;
+
+
+                &:hover {
+                    background-color: #c82333;
+                }
+            }
         }
     }
 }
