--- a/src/pages/Testimonials/Testimonials.scss
+++ b/src/pages/Testimonials/Testimonials.scss
@@ -2,7 +2,8 @@
 
 .contact-section {
     margin-top: 130px;
-    height: 500px;
+    margin-bottom: 50px;
+    height: 120vh;
 
     .section-title {
         max-width: 550px;
@@ -13,7 +14,7 @@
 
 .contact-form-area {
     max-width: 750px;
-    margin: -200px auto 100px;
+    margin: 50px auto 100px;
     padding: 50px;
     background: $color-white;
     border-radius: 20px;
