--- a/src/sections/Gallery/Gallery.scss
+++ b/src/sections/Gallery/Gallery.scss
@@ -1,4 +1,7 @@
 .gallery-section {
+    .container {
+        margin-top: 50px;
+    }
     .section-title {
         text-align: center;
         margin: 0 auto 40px;
