--- a/src/sections/Team/Team.scss
+++ b/src/sections/Team/Team.scss
@@ -1,6 +1,14 @@
 @import '../../sass/colors.scss';
 
 .team-section {
+    height: 1380px;
+
+    .container{
+        background-color: white;
+        border-radius: 30px;
+        padding: 50px;
+    }
+
     .section-title {
         h2 {
             max-width: inherit;
@@ -14,6 +22,7 @@
         .team-img {
             margin-bottom: 20px;
             position: relative;
+            z-index: 2;
 
             &::before {
                 position: absolute;
@@ -22,7 +31,7 @@
                 right: 0;
                 width: 100%;
                 height: 100%;
-                background: #DBEFFA;
+                background: #E08E45;
                 content: '';
                 z-index: -1;
                 border-radius: 10px;
