--- a/src/pages/AdminPages/Admin.scss
+++ b/src/pages/AdminPages/Admin.scss
@@ -1,94 +1,129 @@
 @import './../../sass/colors.scss';
-
-.admin {
+.admin-container {
     padding: 20vh;
 
-    .admin-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 20px;
-    }
+    .admin-section {
+        margin-bottom: 40px;
 
-    .upload-container {
-        display: flex;
-    }
-
-    .upload-button {
-        padding: 10px 20px;
-        background-color: $color-blue;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
-
-    .upload-button:hover {
-        background-color: #0056b3;
-    }
-
-    #file-upload {
-        display: none;
-    }
-
-    .gallery-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-        gap: 20px;
-    }
-
-    .gallery-item {
-        position: relative;
-        overflow: hidden;
-
-        img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
+        .about-details-container {
+            border: 1px solid #ccc;
+            padding: 20px;
         }
 
-        .button-container {
+        .about-details-header {
             display: flex;
-            flex-direction: column;
             align-items: center;
-            padding: 5px;
+            justify-content: space-between;
+            margin-bottom: 20px;
         }
 
-        .replace-button, button {
-            width: 100%;
-            padding: 5px 10px;
-            background-color: #cc4545;
-            text-align: center;
+        .section-title {
+            margin-bottom: 20px;
+        }
+
+        .save-btn {
+            padding: 10px 20px;
+            width: auto;
+            background-color: #007bff;
             color: #fff;
             border: none;
-            border-radius: 3px;
+            border-radius: 5px;
             cursor: pointer;
-            margin-bottom: 5px;
+            transition: background-color 0.3s;
         }
 
-        .replace-button {
-            background-color: $color-blue;
+        .save-btn:hover {
+            background-color: #0056b3;
         }
 
-        input[type="file"] {
-            display: none;
+        form {
+            margin-bottom: 20px;
+
+            .about-form {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 20px;
+
+                .about-column {
+                    display: flex;
+                    flex-direction: column;
+                }
+
+                label {
+                    font-weight: bold;
+                }
+
+                input[type="text"],
+                textarea {
+                    width: 100%;
+                    padding: 8px;
+                    border: 1px solid #ccc;
+                    border-radius: 5px;
+                }
+            }
+
+            textarea {
+                height: 100%;
+            }
         }
-    }
 
-    .placeholder {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 2px dashed #ccc;
-        border-radius: 5px;
-        background-color: #f9f9f9;
-        color: #666;
-        font-size: 18px;
-        cursor: pointer;
+        .faculty-title {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
 
-        input[type="file"] {
-            display: none;
+        button.add-member-btn {
+            padding: 10px 20px;
+            width: auto;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button.add-member-btn:hover {
+            background-color: #0056b3;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            text-align: center;
+
+            th, td {
+                padding: 10px;
+                border: 1px solid #ddd;
+            }
+
+            tr:hover {
+                background-color: #ddd;
+            }
+
+            input[type="file"] {
+                margin: 0 auto;
+                display: block;
+            }
+
+            button {
+                padding: 5px 10px;
+                width: auto;
+                color: #fff;
+                border: none;
+                border-radius: 3px;
+                cursor: pointer;
+                transition: background-color 0.3s;
+                margin-right: 5px;
+                font-size: 10px;
+                background-color: $color-blue;
+            }
+
+            button:hover {
+                background-color: #dc3545;
+            }
         }
     }
 }
