--- a/src/components/BlogCard/BlogCard.scss
+++ b/src/components/BlogCard/BlogCard.scss
@@ -2,6 +2,7 @@
 
 .blog-card {
     border: 1px solid #dddddd;
+    background-color: #fff;
     padding: 25px;
     border-radius: 32px;
     margin-bottom: 20px;
