--- a/src/sections/Features/Features.scss
+++ b/src/sections/Features/Features.scss
@@ -1,4 +1,7 @@
 .features-section {
+    background-color: rgba(224, 142, 69, 0.9);
+    border-radius: 30px;
+    margin: 2%;
     .section-title {
         h2 {
             max-width: inherit;
