--- a/src/pages/AdminPages/AdminGallery.scss
+++ b/src/pages/AdminPages/AdminGallery.scss
@@ -16,6 +16,8 @@
 
     .upload-button {
         padding: 10px 20px;
+        width: auto;
+        margin-bottom: 20px;
         background-color: $color-blue;
         color: #fff;
         border: none;
