--- a/src/index.scss
+++ b/src/index.scss
@@ -40,7 +40,8 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 .section-bg {
-    background-color: #DBEFFA;
+    // background-color: #DBEFFA;
+    background-color: #FFFDD6;
 }
 .section-common {
     border-radius: 48px;
