--- a/src/sections/ParentsTestimonial/Testimonial.scss
+++ b/src/sections/ParentsTestimonial/Testimonial.scss
@@ -1,3 +1,8 @@
+.section-common {
+    border-radius: 48px;
+    margin-top: 25px;
+}
+
 .testimoni-slider {
     .slick-arrow {
         display: none !important;
