--- a/src/pages/Testimonials/Testimonials.scss
+++ b/src/pages/Testimonials/Testimonials.scss
@@ -1,9 +1,25 @@
 @import '../../sass/colors.scss';
 
+.testimonial {
+    background-color: #E9BC94;
+    padding-top: 70px;
+    padding-bottom: 20px;
+}
+
 .contact-section {
-    margin-top: 130px;
-    margin-bottom: 50px;
-    height: 120vh;
+    background-image: url("~/src/assets/testimonial/designtestimonial.png");
+    background-size: 100%;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    max-width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    height: 890px;
+    border-radius: 30px;
+    margin-left: 25px;
+    margin-right: 25px;
 
     .section-title {
         max-width: 550px;
@@ -14,9 +30,31 @@
 
 .contact-form-area {
     max-width: 750px;
-    margin: 50px auto 100px;
+    margin: 10px auto 100px;
     padding: 50px;
     background: $color-white;
     border-radius: 20px;
     box-shadow: 0px 0 20px 14px #6c757d0d;
+}
+
+.about-banner-img {
+    text-align: center;
+    position: relative;
+
+    img {
+        margin: 0 10px;
+
+        &:nth-child(2) {
+            margin-top: 120px;
+        }
+    }
+
+    .pattern {
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+        bottom: 0;
+        z-index: -1;
+    }
 }
