Updates a lot... (pt.3)

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -28,7 +28,7 @@
                     margin: 10px 30px;
 
                     &:hover {
-                        color: $color-blue;
+                        color: $color-rose;
                     }
                 }
             }
