--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -1,4 +1,6 @@
-$color-blue: #583FBC;
+// $color-blue: #583FBC;
+$color-blue: #CB7575;
 $color-black: #181945;
 $color-white: #ffffff;
 $color-gray: #74758F;
+$color-rose: #CB7575;
