--- a/src/sections/Priority/Priority.scss
+++ b/src/sections/Priority/Priority.scss
@@ -1,11 +1,12 @@
 @import '../../sass/colors.scss';
 
 .priority-section {
-    background-image: url("~/src/assets/login/admin-log-in.png");
+    background-image: url("~/src/assets/lks/2.jpg");
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
     padding-bottom: 40px;
+    margin-top: 150px;
     
     // .priority-img {
     //     text-align: right;
@@ -29,7 +30,7 @@
 
     .priority-text {
         background-color: white;
-        max-width: 600px;
+        max-width: 630px;
         height: 210px;
         margin-top: 370px;
         margin-bottom: 30px;
