--- a/src/sections/AboutBanner/AboutBanner.scss
+++ b/src/sections/AboutBanner/AboutBanner.scss
@@ -12,13 +12,14 @@
         height: 260px;
         
         h2 {
-            margin-top: -6%;
-            font-size: 55px;
+            margin-top: -2%;
+            font-size: 36px;
             font-weight: 700;
             margin-bottom: 10px;
         }
 
         p {
+            font-size: 15px;
             margin-bottom: 45px;
         }
     }
@@ -27,12 +28,19 @@
     .about-banner-img {
         text-align: center;
         position: relative;
-
+        
         img {
             margin: 0 10px;
+            border-radius: 30px;
+            width: 280px;
+            height: 300px;
+            background-size: cover;
+            background-position: center;
+            object-fit: cover;
 
             &:nth-child(2) {
                 margin-top: 120px;
+                border-radius: 30px;
             }
         }
 
