Updates final user pages

--- a/src/pages/Testimonials/Testimonials.scss
+++ b/src/pages/Testimonials/Testimonials.scss
@@ -1,8 +1,8 @@
 @import '../../sass/colors.scss';
 
 .testimonial {
-    background-color: #E9BC94;
-    padding-top: 70px;
+    // background-color: #E9BC94;
+    padding-top: 125px;
     padding-bottom: 20px;
 }
 
