--- a/src/sections/Gallery/Gallery.scss
+++ b/src/sections/Gallery/Gallery.scss
@@ -10,5 +10,15 @@
 
     .gallery-img {
         margin-bottom: 20px;
+
+        img {
+            margin-bottom: 20px;
+            border-radius: 30px;
+            max-width: 100%;
+            height: 300px;
+            background-size: cover;
+            background-position: center;
+            object-fit: cover;
+        }
     }
 }
