--- a/src/pages/AdminPages/AdminTestimonials.scss
+++ b/src/pages/AdminPages/AdminTestimonials.scss
@@ -1,8 +1,12 @@
 .admin-testimonials {
     padding: 20vh;
-
+    margin-bottom: -40px;
+    
     .testimonials-table {
         margin-bottom: 40px;
+        padding: 5%;
+        margin-left: -3vh;
+        margin-right: -3vh;
 
         h2 {
             text-align: center;
