--- a/src/sections/AboutBanner/AboutBanner.scss
+++ b/src/sections/AboutBanner/AboutBanner.scss
@@ -12,14 +12,14 @@
         height: 260px;
         
         h2 {
-            margin-top: -2%;
-            font-size: 36px;
+            margin-top: -1%;
+            font-size: 50px;
             font-weight: 700;
             margin-bottom: 10px;
         }
 
         p {
-            font-size: 15px;
+            // font-size: 30px;
             margin-bottom: 45px;
         }
     }
