--- a/src/sections/Safety/Safety.scss
+++ b/src/sections/Safety/Safety.scss
@@ -10,14 +10,17 @@
         background-position: top;
         background-repeat: no-repeat;
         max-width: 800px;
-        padding: 3%;
+        padding-top: 2%;
+        padding-left: 3%;
+        padding-right: 5%;
         height: 400px;
         text-align: center;
         // max-width: 600px;
-        margin: 0 auto 50px;
+        margin: 0 50px 0 280px;
 
         h2 {
             max-width: inherit;
+            font-size: xx-large;
         }
     }
 
